--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,8 @@
 *.bat text eol=crlf
 *.cmd text eol=crlf
 *.ps1 text eol=crlf
+
+.gitignore export-ignore
+docs export-ignore
+.readthedocs.yaml export-ignore
+.gitattributes export-ignore
