--- a/docker/compose/http.yaml
+++ b/docker/compose/http.yaml
@@ -7,8 +7,8 @@ services:
     environment:
       - TZ=${TZ:-}
     ports:
-      - "${NGINX_HTTP_PORT:-80}:80"
-      - "${NGINX_HTTPS_PORT:-443}:443"
+      - "${HTTP_PORT:-80}:80"
+      - "${HTTPS_PORT:-443}:443"
     volumes:
       - ../../logs/nginx:/var/log/nginx
       - ../../configuration/nginx:/etc/nginx/conf.d:ro
